hphp/hack/test/typecheck/is_expression/keyset.php.exp
File "keyset.php", line 4, characters 13-18:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "hackarray.hhi", line 43, characters 24-29:
  Definition is here
File "keyset.php", line 6, characters 20-21:
Invalid argument (Typing[4110])
  File "keyset.php", line 25, characters 32-37:
  Expected `string`
  File "hackarray.hhi", line 43, characters 55-62:
  But got `arraykey`
File "keyset.php", line 13, characters 20-21:
Invalid argument (Typing[4110])
  File "keyset.php", line 25, characters 32-37:
  Expected `string`
  File "hackarray.hhi", line 43, characters 55-62:
  But got `arraykey`
